API更新
Swallow.modifyUserに引数emailを追加
日時を保持する変数を(Integer|Date)からLongに変更